<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_budget"
        android:icon="@android:drawable/ic_menu_save"
        android:title="Bütçe" />
    <item
        android:id="@+id/nav_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add" />
    <item
        android:id="@+id/nav_goals"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/goals" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>